--- a/client/style.css
+++ b/client/style.css
@@ -49,12 +49,10 @@ header a:hover{
 
 header .tabs .tab.active{
     background-color: rgb(139, 128, 128);
-    /* background-size: 10rem; */
     font-size: 2.3rem;
 }
 header .tabs .tab:hover{
     background-color: rgb(139, 128, 128);
-    /* background-size: 10rem; */
     font-size: 2.3rem;
 }
 
@@ -65,14 +63,6 @@ header .tabs .tab:hover{
 .pages .page.active {
     display: block;
 }
-
-/* .mainLinks .lis .legoDiv {
-    display: none;
-}
-
-.mainLinks .lis .legoDiv.active {
-    display: block;
-} */
 
 html{
     font-size: 0.625rem;
@@ -104,9 +94,6 @@ footer{
     align-items: center;
     display: flex;
     justify-content: center;
-    /* align-items: center;
-    justify-content: space-between; */
-
 }
 
 .mainLinks{
@@ -170,7 +157,6 @@ footer{
     border-radius: 1.563rem 1.563rem 1.563rem 1.563rem;
     width: 22rem;
     margin-left: 5rem;
-    /* border-radius: 0.625rem 0.625rem 0.625rem 0.625rem; */
 }
 .addToCart:hover{
     color: red;
@@ -197,7 +183,6 @@ footer{
     margin: 1.5rem 0 0 0;
     font-size: 1.7rem;
     justify-content: space-between;
-    /* right: -10rem; */
 }
 
 .loginDiv Button:hover {
@@ -258,8 +243,6 @@ input{
         background: black;
         position: absolute;
         top: 100%; 
-        /* right: 0; */
-        /* left: -120%; */
         width: 100%;
         border-top: 0.1rem solid rgb(255, 251, 0);
     }
@@ -274,9 +257,6 @@ input{
         padding: 1.5rem;
         display: block;
     }
-    /* header .tabs .active{
-        left:0;
-    } */
 } 
 @media(max-width:35rem){
     input{
@@ -289,5 +269,60 @@ input{
     }
     header .icons a{
         font-size: 1.2rem;
+    }
+}
+
+@media(max-width:30rem){
+    input{
+        width: 5rem;
+        border: 1px solid rgb(255, 251, 0);
+    }
+
+    #options{
+        font-size: 2rem;
+    }
+}
+
+@media(max-width:28rem){
+    input{
+        width: 4rem;
+        border: 1px solid rgb(255, 251, 0);
+    }
+
+    #options{
+        font-size: 2rem;
+    }
+
+    #logo{
+        font-size: 2rem;
+    }
+    .legoDiv img{
+        max-width: 12rem;
+        max-height: 12rem;
+        min-width: 12rem;
+        min-height: 12rem;
+        margin: 5rem;
+    }
+    .addToCart{
+        font-size: 2rem;
+        color: rgb(255, 251, 0);
+        background: black;
+        border-radius: 1.563rem 1.563rem 1.563rem 1.563rem;
+        width: 18rem;
+        margin-left: 5rem;
+    }
+    .mainLinks li{
+        background: rgb(248, 248, 237);
+        flex: 0 1 30rem;
+        border: 0.2rem rgb(230, 214, 214) solid;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        margin: 1rem;
+        height: 30rem;
+        color: black;
+        text-align: center;
+        font-size: 2rem;
+    }
+    .legoPrice{
+        font-size: 2rem;
     }
 }
