--- a/client/style.css
+++ b/client/style.css
@@ -47,12 +47,12 @@ header a:hover{
     color: rgb(255, 0, 0);
 }
 
-header .tabs .tab.active{
+/* header .tabs .tab.active{
     background-color: rgb(139, 128, 128);
     font-size: 2.3rem;
-}
+} */
 header .tabs .tab:hover{
-    background-color: rgb(139, 128, 128);
+    background-color: rgb(255, 255, 255);
     font-size: 2.3rem;
 }
 
@@ -112,7 +112,7 @@ footer{
     border: 0.2rem rgb(230, 214, 214) solid;
     box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
     margin: 1rem;
-    height: 42rem;
+    height: 45rem;
     color: black;
     text-align: center;
     font-size: 2rem;
