--- a/client/style.css
+++ b/client/style.css
@@ -163,6 +163,18 @@ footer{
     background: white;
 }
 
+.continueButton{
+    font-size: 2rem;
+    color: rgb(255, 251, 0);
+    background: black;
+    border-radius: 1.563rem 1.563rem 1.563rem 1.563rem;
+    width: 22rem;
+}
+.continueButton:hover{
+    color: red;
+    background: white;
+}
+
 .loginDiv {
     display: none;
     border:  1rem, solid rgb(255, 251, 0);
@@ -229,6 +241,31 @@ input{
     color: rgb(255, 0, 0);
 }
 
+.cartHeader{
+    margin-top: 5rem;
+    margin-left: 40rem;
+    margin-right: 40rem;
+    text-align: center;
+    position: relative;
+    align-items: center;
+    display: flex;
+    box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+    justify-content: space-between;
+}
+
+.cartSignIn{
+    height: 40rem;
+    margin-top: 10rem;
+    margin-left: 40rem;
+    margin-right: 40rem;
+    text-align: center;
+    position: relative;
+    align-items: center;
+    display: flex;
+    box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+    justify-content: space-between;
+}
+
 @media(max-width:50rem){
     .tabs.display{
         display: block;
@@ -257,8 +294,64 @@ input{
         padding: 1.5rem;
         display: block;
     }
+    .cartHeader{
+        height: 3rem;
+        font-size: 1.5rem;
+        margin-top: 5rem;
+        margin-left: 15rem;
+        margin-right: 15rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
+    .cartHeader h1{
+        font-size: 1.5rem;
+    }
+    .cartSignIn{
+        height: 40rem;
+        margin-top: 10rem;
+        margin-left: 15rem;
+        margin-right: 15rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
 } 
 @media(max-width:35rem){
+    .cartHeader{
+        height: 3rem;
+        font-size: 1.5rem;
+        margin-top: 5rem;
+        margin-left: 7rem;
+        margin-right: 7rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
+    .cartHeader h1{
+        font-size: 1.5rem;
+    }
+    .cartSignIn{
+        height: 40rem;
+        margin-top: 10rem;
+        margin-left: 7rem;
+        margin-right: 7rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
     input{
         width: 7rem;
         border: 1px solid rgb(255, 251, 0);
@@ -273,6 +366,34 @@ input{
 }
 
 @media(max-width:30rem){
+    .cartHeader{
+        height: 3rem;
+        font-size: 1.5rem;
+        margin-top: 5rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
+    .cartHeader h1{
+        font-size: 1.5rem;
+    }
+    .cartSignIn{
+        height: 40rem;
+        margin-top: 10rem;
+        margin-left: 3rem;
+        margin-right: 3rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
     input{
         width: 5rem;
         border: 1px solid rgb(255, 251, 0);
@@ -284,6 +405,33 @@ input{
 }
 
 @media(max-width:28rem){
+    .cartHeader{
+        height: 3rem;
+        margin-top: 5rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
+    .cartHeader h1{
+        font-size: 1.5rem;
+    }
+    .cartSignIn{
+        height: 40rem;
+        margin-top: 10rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        text-align: center;
+        position: relative;
+        align-items: center;
+        display: flex;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        justify-content: space-between;
+    }
     input{
         width: 4rem;
         border: 1px solid rgb(255, 251, 0);
@@ -324,5 +472,16 @@ input{
     }
     .legoPrice{
         font-size: 2rem;
+    }
+}
+
+@media(max-width:75rem){
+    .cartHeader{
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .cartSignIn{
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 }
