--- a/client/style.css
+++ b/client/style.css
@@ -106,7 +106,30 @@ footer{
     list-style-type: none;
 }
 
+.kitLinks{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    padding: 0;
+    list-style-type: none;
+}
+
 .mainLinks li{
+    background: rgb(248, 248, 237);
+    flex: 0 1 30rem;
+    border: 0.2rem rgb(230, 214, 214) solid;
+    box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+    margin: 1rem;
+    height: 45rem;
+    color: black;
+    text-align: center;
+    font-size: 2rem;
+}
+
+
+.kitLinks li{
     background: rgb(248, 248, 237);
     flex: 0 1 30rem;
     border: 0.2rem rgb(230, 214, 214) solid;
@@ -460,6 +483,17 @@ input{
         margin-left: 5rem;
     }
     .mainLinks li{
+        background: rgb(248, 248, 237);
+        flex: 0 1 30rem;
+        border: 0.2rem rgb(230, 214, 214) solid;
+        box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+        margin: 1rem;
+        height: 30rem;
+        color: black;
+        text-align: center;
+        font-size: 2rem;
+    }
+    .kitLinks li{
         background: rgb(248, 248, 237);
         flex: 0 1 30rem;
         border: 0.2rem rgb(230, 214, 214) solid;
