--- a/client/style.css
+++ b/client/style.css
@@ -184,6 +184,7 @@ footer{
 .addToCart:hover{
     color: red;
     background: white;
+    filter: drop-shadow(0.2rem 0.2rem black);
 }
 
 .continueButton{
