--- a/client/style.css
+++ b/client/style.css
@@ -143,7 +143,7 @@ footer{
     justify-content: space-around;
 }
 
-.legoDiv img, .legoBasket img{
+.legoDiv img, .legoBasket img, .slide-image{
     max-width: 22rem;
     max-height: 22rem;
     min-width: 22rem;
@@ -445,6 +445,106 @@ header .loginDiv {
     background: white;
 } */
 
+.featured{
+    margin-top: 5rem;
+}
+
+/* .slide-image {
+    max-width: 22rem;
+    max-height: 22rem;
+    min-width: 22rem;
+    min-height: 22rem;
+} */
+
+.slides{
+    /* align-items: center; */
+    width: 25rem;
+    box-shadow: 0 .5rem 1rem rgb(30, 19, 54);
+    /* margin: 0 0 0 5rem; */
+    height: 25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.container{
+    display: flex;
+}
+
+video {
+    display: flex;
+    /* margin: 5rem; */
+    margin: 3rem 0 0 5rem;
+} 
+
+.slide-image{
+    margin: 0;
+}
+.container div{
+    flex: 0 1 30rem;
+}
+.container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.slides{
+    margin: 1rem;
+}
+.qtyContainer{
+    display: flex;
+}
+.increase{
+    margin-left: 1rem;
+}
+.decrease{
+    margin-right: 1rem;
+}
+
+@media(max-width:75rem){
+    .cartHeader{
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    .cartSignIn{
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    video{
+        height: 90rem;
+        width: 90rem;
+    }
+    .slides{
+    margin: 0 0 0 3rem;
+    }
+}
+
+@media(max-width:65rem){
+    video{
+        height: 75rem;
+        width: 75rem;
+    }
+
+    /* .container{
+        display: grid;
+        grid-template-rows: 5rem 1fr 5rem;
+        grid-template-columns: 1fr;
+
+    } */
+    /* .container div{
+        flex: 0 1 30rem;
+    }
+    .container{
+        display: flex;
+        flex-wrap: wrap;
+    } */
+}
+
+@media(max-width:55rem){
+    video{
+        height: 65rem;
+        width: 65rem;
+    }
+}
 
 @media(max-width:50rem){
     .tabs.display{
@@ -531,7 +631,35 @@ header .loginDiv {
     #brickPage .addToCart, #brickPage .addToWishList{
         margin: 1rem 0 0 10rem;
     }
+    video{
+        height: 70rem;
+        width:70rem;
+    }
 } 
+
+@media(max-width:47rem){
+    video{
+        height: 60rem;
+        width: 60rem;
+        margin-top: 0;
+    }
+    .slides{
+        margin-left: 15rem;
+    }
+}
+
+@media(max-width:42rem){
+    video{
+        height: 55rem;
+        width: 55rem;
+        margin-top: 0;
+        margin-left: 3rem;
+    }
+    .slides{
+        margin-left: 12rem;
+    }
+}
+
 @media(max-width:35rem){
     .cartHeader{
         height: 3rem;
@@ -571,6 +699,10 @@ header .loginDiv {
     }
     header .icons a{
         font-size: 1.2rem;
+    }
+    video{
+        height: 46rem;
+        width: 46rem;
     }
 }
 
@@ -614,6 +746,15 @@ header .loginDiv {
     #sort{
         width: 5rem;
     }
+    video{
+        height: 40rem;
+        width: 40rem;
+        margin-left: 3rem;
+        margin-top: 0;
+    }
+    .slides{
+        margin-left: 8rem;
+    }
 }
 
 @media(max-width:28rem){
@@ -656,7 +797,7 @@ header .loginDiv {
     #logo{
         font-size: 2rem;
     }
-    .legoDiv img, .legoBasket img{
+    .legoDiv img, .legoBasket img, .slide-image{
         max-width: 12rem;
         max-height: 12rem;
         min-width: 12rem;
@@ -717,15 +858,18 @@ header .loginDiv {
     .legoInCart{
         width: 10rem;
     }
-}
-
-@media(max-width:75rem){
-    .cartHeader{
-        margin-left: 2rem;
-        margin-right: 2rem;
+    video{
+        height: 30rem;
+        width: 30rem;
+        margin-top: 0;
+        margin-left: 3rem;
     }
-    .cartSignIn{
-        margin-left: 2rem;
-        margin-right: 2rem;
+    .slides{
+        height: 15rem;
+        width: 10rem;
+        margin-left: 4rem;
+    }
+    .slide-image{
+        margin-left: 10rem;
     }
 }
