--- a/client/style.css
+++ b/client/style.css
@@ -398,7 +398,7 @@ header .loginDiv {
     margin: 5rem 1rem 5rem 0;
     font-weight: bold;
 }
-.emptyCart{
+.emptyCart, .deleteBrick{
     display: none;
 }
 .authenticCheckout{
